[gd_scene load_steps=9 format=3 uid="uid://bsadn0xs33h06"]

[ext_resource type="Script" path="res://scripts/title_menu_2.gd" id="1_54a3o"]
[ext_resource type="Texture2D" uid="uid://bjs3ru8rn3flw" path="res://assets/Mini FX, Items & UI/Mini UI/title-screen.jpg" id="1_hjhjp"]
[ext_resource type="Texture2D" uid="uid://dee6aksqwh6n1" path="res://assets/Mini FX, Items & UI/Mini UI/game_logo.png" id="2_u4sbs"]
[ext_resource type="Texture2D" uid="uid://bb4phb6y8bnbs" path="res://assets/Mini FX, Items & UI/Mini UI/Life-Counter-Icon.png" id="3_3e1jf"]
[ext_resource type="Theme" uid="uid://bk7v7j56swnd2" path="res://prefabs/title_screen_button.tres" id="3_a25bi"]

[sub_resource type="Animation" id="Animation_yy05t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("margin_container:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-329, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("margin_container/HBoxContainer/character:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_i2jij"]
resource_name = "title_screen"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("margin_container:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-329, 0), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("margin_container/HBoxContainer/character:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8agch"]
_data = {
"RESET": SubResource("Animation_yy05t"),
"title_screen": SubResource("Animation_i2jij")
}

[node name="title_menu_2" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_54a3o")

[node name="bg" type="TextureRect" parent="."]
layout_mode = 1
offset_right = 639.0
offset_bottom = 317.0
texture = ExtResource("1_hjhjp")
expand_mode = 1

[node name="margin_container" type="MarginContainer" parent="."]
layout_mode = 1
offset_left = -329.0
offset_right = 311.0
offset_bottom = 318.0

[node name="HBoxContainer" type="HBoxContainer" parent="margin_container"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="margin_container/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="game_logo" type="TextureRect" parent="margin_container/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_u4sbs")

[node name="start_btn" type="Button" parent="margin_container/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_a25bi")
text = "START"

[node name="credits_btn" type="Button" parent="margin_container/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_a25bi")
text = "CREDITS"

[node name="quit_btn" type="Button" parent="margin_container/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_a25bi")
text = "QUIT GAME"

[node name="character" type="TextureRect" parent="margin_container/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_3e1jf")
expand_mode = 2
flip_h = true

[node name="animation_player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8agch")
}
autoplay = "title_screen"

[connection signal="pressed" from="margin_container/HBoxContainer/VBoxContainer/start_btn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="margin_container/HBoxContainer/VBoxContainer/quit_btn" to="." method="_on_quit_btn_pressed"]
